--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -3,6 +3,7 @@ pipeline {
     stages {
         stage('Example') {
             steps {
+                sh 'pwd'
                 sh './deploy hello'
             }
         }
