--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -5,6 +5,8 @@ pipeline {
             steps {
                 sh 'pwd'
                 sh './deploy hello'
+                touch file: test.txt
+                sh 'ls -al'
             }
         }
     }
