--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -17,7 +17,7 @@ pipeline {
                     println "hello"
 
                 }
-                sh 'echo ${env.version}'
+                echo "${version}"
                 
             }
         }
