--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -18,6 +18,7 @@ pipeline {
 
                 }
                 echo "${version}"
+                sh 'echo ${version}'
                 
             }
         }
