--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -2,6 +2,15 @@ pipeline {
     agent any
     stages {
         stage('Example') {
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+                submitter "alice,bob"
+                parameters {
+                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                }
+            }
+            echo "Hello, ${PERSON}, nice to meet you."
             steps {
                 sh 'pwd'
                 sh './deploy hello'
