--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -36,5 +36,12 @@ pipeline {
                 
             }
         }
+
+        stage('Example') {
+            steps {
+                    echo "123-${version}"
+            }
+        }
+        
     }
 }
