--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -37,7 +37,7 @@ pipeline {
             }
         }
 
-        stage('Example') {
+        stage('Example1') {
             steps {
                     echo "123-${version}"
             }
