--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -3,7 +3,7 @@ pipeline {
     environment {
         DISABLE_AUTH = 'true'
         DB_ENGINE    = 'sqlite'
-        DEPLOY_TO = 'test'
+        DEPLOY_TO = 'staging'
     }
     stages {
         stage('Example') {
