--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -1,5 +1,5 @@
 pipeline {
-    agent { docker 'alexeiled/java7-maven-git' } 
+    agent { docker 'jlrigau/maven-git' } 
     stages {
         stage('Example Build') {
             steps {
