--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -7,6 +7,10 @@ pipeline {
                 sh 'java -version'
                 sh 'git --version'
                 sh 'python --version'
+                sh 'mkdir work'
+                sh 'cd work'
+                sh 'git clone git@github.com:rihou/hello.git'
+                sh 'ls -al'
             }
         }
     }
