--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -9,7 +9,10 @@ pipeline {
                 sh 'python --version'
                 sh 'mkdir work'
                 sh 'cd work'
-                sh 'git clone git@github.com:rihou/hello.git'
+                sshagent(['53f245a5-f460-46f4-b3f2-1fdd107df4fc']) {
+                    // some block
+                    sh 'git clone git@github.com:rihou/hello.git'
+                }
                 sh 'ls -al'
             }
         }
