--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -11,6 +11,7 @@ pipeline {
                 sh 'cd work'
                 sshagent(['53f245a5-f460-46f4-b3f2-1fdd107df4fc']) {
                     // some block
+                    sh 'ssh-add -l'
                     sh 'git clone git@github.com:rihou/hello.git'
                 }
                 sh 'ls -al'
