--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -9,7 +9,7 @@ pipeline {
                 sh 'python --version'
                 sh 'mkdir -p work'
                 sh 'cd work'
-                sshagent(['53f245a5-f460-46f4-b3f2-1fdd107df4fc']) {
+                withCredentials([sshUserPrivateKey(credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc', keyFileVariable: 'key_file', passphraseVariable: 'pass', usernameVariable: 'user')]) {
                     // some block
                     sh 'ssh-add -l'
                     //sh 'git clone git@github.com:rihou/hello.git'
