--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -9,12 +9,13 @@ pipeline {
                 sh 'python --version'
                 sh 'mkdir -p work'
                 sh 'cd work'
-                withCredentials([sshUserPrivateKey(credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc', keyFileVariable: 'key_file', passphraseVariable: 'pass', usernameVariable: 'user')]) {
+                sshagent(['53f245a5-f460-46f4-b3f2-1fdd107df4fc']) {
                     // some block
                     sh 'ssh-add -l'
+                    sh 'ssh -o StrictHostKeyChecking=no rihou@github.com uptime'
                     //sh 'git clone git@github.com:rihou/hello.git'
-                    git branch: 'master', credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc',
-                         url: 'git@github.com:rihou/hello.git'
+                    //git branch: 'master', credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc',
+                    //     url: 'git@github.com:rihou/hello.git'
                 }
                 sh 'ls -al'
             }
