--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -22,7 +22,7 @@ pipeline {
                     //git branch: 'master', credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc',
                     //     url: 'git@github.com:rihou/hello.git'
                 }
-                sh 'ls -al'
+                sh 'ls -al hello'
             }
         }
     }
