--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -1,10 +1,10 @@
 pipeline {
-    //agent { docker {
-    //    image 'jlrigau/maven-git' 
-    //    args '-u root'
-    //    }
-    //}
-    agent any 
+    agent { docker {
+        image 'jlrigau/maven-git' 
+        args '-u root'
+        }
+    }
+    //agent any 
     stages {
         stage('Example Build') {
             steps {
