--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -14,7 +14,9 @@ pipeline {
                 sh 'python --version'
                 sh 'mkdir -p work'
                 sh 'cd work'
+                sh 'pwd'
                 sh 'rm -rf hello'
+
                 sshagent(['53f245a5-f460-46f4-b3f2-1fdd107df4fc']) {
                     // some block
                     sh 'ssh-add -l'
@@ -23,6 +25,7 @@ pipeline {
                     git branch: 'master', credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc',
                         url: 'git@github.com:rihou/hello.git'
                 }
+                sh 'pwd' 
                 sh 'ls -al'
                 sh 'ls -al work'
                 sh 'ls -al work/hello'
