--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -14,6 +14,8 @@ pipeline {
                 sh 'python --version'
                 sh 'mkdir -p work'
                 sh 'cd work'
+                dir 'work'
+                echo 'test'
                 sh 'pwd'
                 sh 'rm -rf hello'
 
