--- a/jenkins/Jenkinsfile.2
+++ b/jenkins/Jenkinsfile.2
@@ -14,7 +14,7 @@ pipeline {
                 sh 'python --version'
                 sh 'mkdir -p work'
                 sh 'cd work'
-                dir ('work) {
+                dir ('work') {
                 sh 'pwd'
                 sh 'rm -rf hello'
 
