--- a/jenkins/Jenkinsfile.3
+++ b/jenkins/Jenkinsfile.3
@@ -1,13 +1,13 @@
 #!groovy
 node {
-stage 'build' {
+stage ('build') {
    
         echo "build ..."
     
 
 }
 //build
-stage 'test' {
+stage ('test') {
    
         echo "test ..."
     
