--- a/jenkins/Jenkinsfile.3
+++ b/jenkins/Jenkinsfile.3
@@ -23,7 +23,7 @@ pipeline {
                 script {
                     def browsers = ['chrome', 'firefox']
                     for (int i = 0; i < browsers.size(); ++i) {
-                        echo "Testing the ${browsers[i]} browser"
+                        echo "Testing the ${browsers[i]} browser -- ${params.PERSON}"
                     }
                 }
             }
