--- a/jenkins/Jenkinsfile.3
+++ b/jenkins/Jenkinsfile.3
@@ -27,6 +27,7 @@ pipeline {
                     def browsers = ['chrome', 'firefox']
                     for (int i = 0; i < browsers.size(); ++i) {
                         echo "Testing the ${browsers[i]} browser -- ${params.PERSON} -- ${env.CC}"
+                        sh "deploy ${env.CC}"
                     }
                 }
             }
