--- a/jenkins/Jenkinsfile.3
+++ b/jenkins/Jenkinsfile.3
@@ -22,6 +22,13 @@ pipeline {
             steps {
                 echo "Hello ${params.PERSON}"
 
+                echo "Biography: ${params.BIOGRAPHY}"
+
+                echo "Toggle: ${params.TOGGLE}"
+
+                echo "Choice: ${params.CHOICE}"
+
+                echo "Password: ${params.PASSWORD}"
 
                 script {
                     def browsers = ['chrome', 'firefox']
