--- a/jenkins/Jenkinsfile.3
+++ b/jenkins/Jenkinsfile.3
@@ -37,6 +37,8 @@ pipeline {
                         sh "./deploy ${env.CC}"
                     }
                 }
+
+                build job: 'test1'
             }
         }
     }
